<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/browseContainer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filter by Category"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorVeryDarkGreen"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/kyokashob"
        />

    <Spinner
        android:entries="@array/categories"
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedspinner"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/otherListingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:layout_marginBottom="60dp"
        android:scrollbars="vertical"
        ></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>