<resources>
    <string name="app_name">env</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Browse</string>
    <string name="title_notifications">Bookmarks</string>
    <string name="title_activity_add_listing">Add Listing</string>
    <string name="category_prompt">Pick Category</string>

    <string-array name="categories">
        <item>Acrylic</item>
        <item>Arts and Crafts</item>
        <item>Adhesives</item>
        <item>Cables and wires</item>
        <item>Electronics</item>
        <item>Events</item>
        <item>General</item>
        <item>Hardware</item>
        <item>Lighting</item>
        <item>Microelectronics</item>
        <item>Robotic Mechanical</item>
        <item>Sealants and Tape</item>
        <item>Software</item>
        <item>Tools</item>
...
