...
        android:ems="10"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/otherListingCategory"
        android:text="Default Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
...
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        />


    <Button
        android:id="@+id/chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="Chat" />
...
